feat: show last activity time on admin panel
